Add invoice config options
