# internal/api/v1/cncrdapi/api.go
@@ -24,6 +24,8 @@ type HealthReportDto struct {
 
 // PaymentLinkRequestDto struct for PaymentLinkDto
 type PaymentLinkRequestDto struct {
+	// The reference ID for this payment, as generated by the Payment service
+	ReferenceId string `json:"reference_id"`
 	// The badge number of the attendee. Will be used to build appropriate description, referenceId, etc.
 	DebitorId uint64 `json:"debitor_id"`
 	// The page title to be shown on the payment page.
